2375
I'm kicking this back to reviewer because I'm not able to figure what puts it in my zone.  BTW these days there is only one spurious error:
{code}
scalac28 MyDialog2.scala 
MyDialog2.scala:12: error: recursive method search needs result type
        search()
        ^
MyDialog2.scala:9: error: not found: type $$anon
  private val searchField = new JTextField() {
                            ^
two errors found
{code}
